# wondrium

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tauri_build.yml
wondrium_cli/: Cargo.toml
wondrium_cli/src/: main.rs
wondrium_lib/: Cargo.toml
wondrium_lib/src/: downloader.rs  lib.rs  utils.rs
wondrium_lib/src/downloader/: constants.rs  network.rs  scraper.rs
wondrium_tauri/: Cargo.toml  tauri.conf.json
wondrium_tauri/src/: main.rs
wondrium_yew/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
wondrium_yew/src/: backend.rs  components.rs  main.rs
wondrium_yew/src/components/: course_container.rs  ui.rs
wondrium_yew/src/components/ui/: card_container.rs  data_list_item_single_col.rs  data_list_item_two_col.rs  description_lists.rs  input_bar.rs  layout.rs  list_header.rs  two_col_list.rs
wondrium_yew/src/components/ui/description_lists/: data_list_item.rs  data_list_item_with_action.rs  list_header.rs
wondrium_yew/src/components/ui/layout/: divider.rs  list_with_dividers.rs
